# CLI-todo

./: .gitignore  README.md  main.py  pyproject.toml  test.py  version.py
.github/workflows/: ci.yml  release.yml
GUI/: app.py  cli_app.py
commands/: add.py  delete.py  flush.py  help.py  list.py  undo.py  update.py
launcher/: launcher.py
models/: classes.py
src/: task_service.py
storage/: json_store.py
tests/: conftest.py  test_models.py  test_storage.py  test_task_service.py
updater/: updater.py
