[project]
name = "cli-todo"
version = "2.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ctklistbox>=1.5",
    "customtkinter>=5.2.2",
    "packaging>=26.0",
    "pillow>=12.1.1",
    "pyinstaller>=6.19.0",
    "pyqt6>=6.10.2",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
